# finance

./: .gitignore  BRIEF.md  CLAUDE.md  DEPLOYMENT_INSTRUCTIONS.md  MANUAL_DEPLOY_STEPS.txt  QA_CHECKLIST.md  README.md  TASK.md  TASKS.md  dev-local.sh  docker-compose.lowram.override.yml  docker-compose.prod.yml  docker-compose.yml  manage.py  qa-test-objects.mjs  qa-test.mjs  requirements.txt  start_dev.sh  Структура меню.md  тестовый счет_comparison.json
ismeta/backend/: .env.example  .gitignore  README.md  conftest.py  manage.py  pyproject.toml  requirements.txt
ismeta/backend/apps/agent/: service.py  views.py
ismeta/backend/apps/estimate/: admin.py  bulk_views.py  material_views.py  models.py  pdf_views.py  schemas.py  serializers.py  urls.py  views.py
ismeta/backend/apps/integration/: recognition_client.py
ismeta/backend/apps/llm/: service.py
ismeta/backend/apps/llm_profiles/: admin.py  apps.py  encryption.py  models.py  proxy.py  serializers.py  urls.py  (+1 more)
ismeta/backend/ismeta/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
recognition/: .gitignore  README.md  openapi.yaml  pyproject.toml  requirements.txt
recognition/app/: auth.py  config.py  deps.py  main.py  pricing.json
recognition/app/api/: errors.py  health.py  parse.py
recognition/app/providers/: base.py  openai_vision.py
recognition/app/schemas/: invoice.py  probe.py  spec.py
recognition/app/services/: _common.py  invoice_normalizer.py  invoice_parser.py  invoice_title_block.py  job_registry.py  llm_throttle.py  pdf_render.py  pdf_text.py  pricing.py  quote_parser.py  spec_normalizer.py  spec_parser.py  spec_postprocess.py  vision_counter.py
recognition/tests/: conftest.py  test_auth.py  test_determinism.py  test_invoice_parser.py  test_llm_provider_override.py  test_llm_throttle.py  test_normalize_llm.py  test_p2_cosmetics.py  test_parse_invoice.py  test_parse_quote.py  test_parse_spec.py  test_parse_spec_async.py  test_pdf_text.py  test_pricing.py  test_probe.py  test_spec_parser_logging.py  test_spec_parser_vision_sticky.py  test_spec_postprocess.py
recognition/tests/golden/: test_spec_aov.py  test_spec_ov2.py  test_spec_tabs.py
(+1972 files in other folders)
